--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
 
             </nav>
             <div class="altside">
-                <a href="#">
+                <a href="https://github.com/bdrtr">
                     <i class="fa fa-arrow-circle-right"></i>
                     <p>Github</p>
                 </a>
@@ -71,38 +71,39 @@
 
                     <ul>
                         <li>
-                            <a href="">
+                            <a href="https://github.com/bdrtr">
                                 <img src="Icons/github.png">
                             </a>
                         </li>
 
                         <li>
-                            <a href="">
+                            <a href="https://orcid.org/0009-0006-0534-4904">
                                 <img src="Icons/face-scan.png">
                             </a>
                         </li>
 
                         <li>
-                            <a href="">
+                            <a href="https://www.kaggle.com/parabasan189">
                                 <img src="Icons/k.png">
                             </a>
                         </li>
 
                         <li>
-                            <a href="">
+                            <a href="https://www.linkedin.com/in/bedir-tu%C4%9Fra-karaabal%C4%B1-6ab50728b/">
                                 <img src="Icons/linkedin.png">
                             </a>
                         </li>
 
                         <li>
 
-                            <a href="">
+                            <a href="mailto:bedirkaraabali@gmail.com">
+
                                 <img src="Icons/mail.png">
                             </a>
                         </li>
 
                         <li>
-                            <a href="">
+                            <a href="https://stackoverflow.com/users/14311722/xcompiler">
                                 <img src="Icons/stack.png">
                             </a>
                         </li>
