--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
                         
                         Durmadan çalışıyor, olması gerekenin peşinden gidiyoruz. Kitaplar, makaleler okuyor, araştırmalar yapıyoruz. Çünkü biliyoruz ki, anlamadığımız her cümleyi, her kelimeyi, hatta her boşluğu, bizden katbekat daha iyi anlayacak ve daha etkili kullanacak binlerce insan var. Onlar da bizden!
                         
-                        Bu gizli ve yıpratıcı yarışta, bir adım daha yukarı çıkmak için elimizden geleni yapıyoruz. Belki bu yolda nerede olduğumuzu asla tam anlamıyla bilemeyeceğiz. Ama bir şeyi biliyoruz: Çalışmaktan, çabalamaktan ve yükselmeye çalışmaktan asla vazgeçmeyeceğiz.
+                        Bu gizli ve yıpratıcı yarışta, bir adım daha yukarı çıkmak için elimizden geleni yapıyoruz. Belki bu yolda nerede olduğumuzu asla tam anlamıyla bilemeyeceğiz. Ama bir şeyi biliyoruz: Çalışmaktan, çabalamaktan ve yükselmeye çalışmaktan <strong>asla</strong> vazgeçmeyeceğiz.
                     </p>
                     <img src="Icons/bengibi.png">
 
